gcc/testsuite/rust/rustc/ui/issues/issue-2281-part1.rs
fn main() { println!("{}", foobar); } // { dg-error ".E0425." "" { target *-*-* } }

